package Singleton;

public enum InvoiceType {
    PHYSICAL,
    DIGITAL
}

