/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.maicol.restaurant.singleton;

/**
 *
 * @author Maicol
 */
public enum LogLevel {
    INFO,
    WARNING,
    ERROR,
    DEBUG
}