/**
 *  concrete strategies
 */
package strategy;

public class CashPayment implements PaymentStrategy {
    
}
